--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,body {
   scroll-behavior: smooth;
+  font-family: 'KalamehWeb', sans-serif;
+
 }
 
 /* *=========== Default theme =========== */
@@ -74,6 +76,111 @@ html {
 } */
 
 /* *=========== Orange theme =========== */
+/**
+ * Name: Kalameh Fonts
+ * Version: 4.1
+ * Author: Naser Khadem
+ * Created on: March 11, 2019
+ * Updated on: July 17, 2021
+ * Website: http://fontiran.com
+ * Copyright: Commercial/Proprietary Software
+ * Kalameh fonts are considered a proprietary software. To gain information about the laws regarding the use of these fonts, please visit www.fontiran.com
+ * This set of fonts are used in this project under the license: (.....)
+ */
+/**
+ * Name: Kalameh Fonts
+ * Version: 4.1
+ * Author: Naser Khadem
+ * Created on: March 11, 2019
+ * Updated on: July 17, 2021
+ * Website: http://fontiran.com
+ * Copyright: Commercial/Proprietary Software
+ * Kalameh fonts are considered a proprietary software. To gain information about the laws regarding the use of these fonts, please visit www.fontiran.com
+ * This set of fonts are used in this project under the license: (.....)
+ */
+
+ @font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 100;
+  src: url('/fonts/woff2/KalamehWeb-Thin.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Thin.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 200;
+  src: url('/fonts/woff2/KalamehWeb-ExtraLight.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-ExtraLight.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 300;
+  src: url('/fonts/woff2/KalamehWeb-Light.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Light.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 500;
+  src: url('/fonts/woff2/KalamehWeb-Medium.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Medium.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 600;
+  src: url('/fonts/woff2/KalamehWeb-Semibold.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Semibold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 800;
+  src: url('/fonts/woff2/KalamehWeb-ExtraBold.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-ExtraBold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: 900;
+  src: url('/fonts/woff2/KalamehWeb-Black.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Black.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: bold;
+  src: url('/fonts/woff2/KalamehWeb-Bold.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Bold.woff') format('woff');
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'KalamehWeb';
+  font-style: normal;
+  font-weight: normal;
+  src: url('/fonts/woff2/KalamehWeb-Regular.woff2') format('woff2'),
+       url('/fonts/woff/KalamehWeb-Regular.woff') format('woff');
+  font-display: swap;
+}
+
+
 @layer base {
   :root {
     --background: 0 0% 100%;
