--- a/app/globals.css
+++ b/app/globals.css
@@ -100,7 +100,7 @@ html,body {
  */
 
  @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 100;
   src: url('/fonts/woff2/KalamehWeb-Thin.woff2') format('woff2'),
@@ -109,7 +109,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 200;
   src: url('/fonts/woff2/KalamehWeb-ExtraLight.woff2') format('woff2'),
@@ -118,7 +118,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 300;
   src: url('/fonts/woff2/KalamehWeb-Light.woff2') format('woff2'),
@@ -127,7 +127,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 500;
   src: url('/fonts/woff2/KalamehWeb-Medium.woff2') format('woff2'),
@@ -136,7 +136,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 600;
   src: url('/fonts/woff2/KalamehWeb-Semibold.woff2') format('woff2'),
@@ -145,7 +145,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 800;
   src: url('/fonts/woff2/KalamehWeb-ExtraBold.woff2') format('woff2'),
@@ -154,7 +154,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: 900;
   src: url('/fonts/woff2/KalamehWeb-Black.woff2') format('woff2'),
@@ -163,7 +163,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: bold;
   src: url('/fonts/woff2/KalamehWeb-Bold.woff2') format('woff2'),
@@ -172,7 +172,7 @@ html,body {
 }
 
 @font-face {
-  font-family: 'KalamehWeb';
+  font-family: 'kalameh';
   font-style: normal;
   font-weight: normal;
   src: url('/fonts/woff2/KalamehWeb-Regular.woff2') format('woff2'),
